change mongodb url

--- a/beehively-backend/.env.example
+++ b/beehively-backend/.env.example
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI= mongodb+srv://arpitribadiya1:arpit2222@beehively.p49qxrz.mongodb.net/?appName=beehively
+MONGO_URI= 'replace mongodb connection url'
 JWT_SECRET= f5283bb3b071140fec0f360e1be578a1
