--- a/beehively-backend/.env.example
+++ b/beehively-backend/.env.example
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI= 'replace mongodb connection url'
-JWT_SECRET= f5283bb3b071140fec0f360e1be578a1
+MONGO_URI='replace_mongodb_connection_url'
+JWT_SECRET='secret-key'
